FillContactFormTest correction